# proximium

./: README.md  pyproject.toml
src/proximium/: __main__.py  app.py  database.py  jwt.py  main.py
src/proximium/api/: __init__.py  auth.py  user.py
src/proximium/models/: auth.py  user.py
src/proximium/schema/: __init__.py  authentication_log.py  user.py
tests/: test_proximium.py
